change html style

--- a/docs/css/template-styles.css
+++ b/docs/css/template-styles.css
@@ -1,9 +1,9 @@
-html {
+/*html {
     font-size: calc(1em + 0.33vw);
     line-height: 1.5;
     color: #111;
     background-color: #fefefe;
-}
+}*/
 
 /* Katex math typesetting */
 .katex * {
