--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,7 +1,7 @@
 /* Micro Reset */
 
 html {
-  font-size: 13px;
+  font-size: 100%;
   font-family: 'Noto Serif', 'Noto Serif CJK SC', 'Noto Serif CJK', 'Source Han Serif SC', 'Source Han Serif CN', 'Source Han Serif', 'source-han-serif-sc', serif;
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
