--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,7 +1,7 @@
 /* Micro Reset */
 
 html {
-  font-size: 100%;
+  font-size: calc(1em + 0.33vw);
   font-family: 'Noto Serif', 'Noto Serif CJK SC', 'Noto Serif CJK', 'Source Han Serif SC', 'Source Han Serif CN', 'Source Han Serif', 'source-han-serif-sc', serif;
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
@@ -134,7 +134,7 @@ hr {
 }
 
 .post-nav {
-  margin-top: 20px;
+  margin: 30px 0px 45px 0px;
   display: flex;
   justify-content: space-between;
   font-weight: bold;
@@ -437,12 +437,22 @@ thead, tfoot, tr:nth-child(even) {
     margin-top: 50px;
     margin-bottom: 0;
   }
+  .patterns li {
+    padding: 0 0;
+  }
 }
+
+
+@media screen and (min-device-width: 481px) and (max-width: 960px) {
+  .main {margin-left: 15rem;}
+}
+
 
 /* Landscape phone screens and smaller */
 
 @media screen and (max-width: 720px) {
 }
+
 
 /* Portrait phone screens */
 
