Fixed some pages

--- a/layouts/partials/head_custom.html
+++ b/layouts/partials/head_custom.html
@@ -13,5 +13,5 @@
 });
 </script>
 {{ end }}
-<link rel="stylesheet" href="{{ $.Site.Params.siteurl }}/css/template-styles.css" />
-<link rel="stylesheet" href="{{ $.Site.Params.siteurl }}/css/custom.css" />
+<link rel="stylesheet" href="{{ $.Site.BaseURL }}/css/template-styles.css" />
+<link rel="stylesheet" href="{{ $.Site.BaseURL }}/css/custom.css" />
