--- a/layouts/partials/head_custom.html
+++ b/layouts/partials/head_custom.html
@@ -15,3 +15,5 @@
 {{ end }}
 <link rel="stylesheet" href="{{ $.Site.BaseURL }}/css/template-styles.css" />
 <link rel="stylesheet" href="{{ $.Site.BaseURL }}/css/custom.css" />
+<link rel="stylesheet" href="{{ $.Site.Params.highlightjsTheme }}">
+
