--- a/layouts/partials/foot_custom.html
+++ b/layouts/partials/foot_custom.html
@@ -27,4 +27,15 @@ document.addEventListener('keyup', function(e) {
 <script async src="{{ . | relURL }}"></script>
 {{ end }}
 
-<script async src="//cdn.bootcss.com/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML"></script>
+<script async src="{{ $.Site.BaseURL }}/js/fix-toc.js"></script>
+<script async src="{{ $.Site.BaseURL }}/js/center-img.js"></script>
+<script async src="{{ $.Site.BaseURL }}/js/right-quote.js"></script>
+<script async src="{{ $.Site.BaseURL }}/js/fix-footnote.js"></script>
+<script async src="{{ $.Site.BaseURL }}/js/math-code.js"></script>
+<script async src="{{ $.Site.BaseURL }}/js/external-link.js"></script>
+<script async src="{{ $.Site.BaseURL }}/js/alt-title.js"></script>
+<script async src="{{ $.Site.BaseURL }}/js/header-link.js"></script>
+<script async src="{{ $.Site.BaseURL }}/js/dom-scripts.js"></script>
+<script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML"></script>
+<script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.3.1/build/highlight.min.js"></script>
+<script>hljs.highlightAll();</script>
