--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -2,9 +2,8 @@
 <html lang="{{ .Site.LanguageCode }}">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"> <!--- Icons --->
-    <link rel="stylesheet" href="https://cdn.bootcss.com/font-awesome/5.6.3/css/all.css">
-    <link rel="stylesheet" href="https://cdn.bootcss.com/font-awesome/5.6.3/css/font-awesome.min.css"> <!--- Icons --->
+    <!--link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"--> <!--- Icons --->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/all.min.css"> <!--- Icons --->
     <link rel="stylesheet" href="/fonts/academicons-1.8.6/css/academicons.min.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css">
     <link rel="icon" type="image/png" sizes="32x32" href="/img/logo.png"> <!--- Likan Icon --->
