--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -84,7 +84,7 @@
           <!--svg viewBox="0 0 50 50" aria-hidden="true" focusable="false">
             <use xlink:href="#menu"></use>
           </svg-->
-          目录
+          Menu
         </button>
         {{ $current := . }}
         <ul id="patterns-list">
