--- a/layouts/404.html
+++ b/layouts/404.html
@@ -2,6 +2,6 @@
 
 <p style="text-align:center;">Page not found. Feel confused? Please go ahead and leave a message below to notify me. Thanks!</p>
 
-<p style="text-align:center;"><img src="https://blog.bioinit.com/img/elevator.gif" alt="404 not found" /></p>
+<p style="text-align:center;"><img src="https://cdn.jsdelivr.net/gh/shenweiyan/CustomAssets/ics/elevator.gif" alt="404 not found" /></p>
 
 {{ partial "footer.html" . }}
