修复 Fancybox, Tags, 归档等一系类问题

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -8,6 +8,6 @@
   {{ $reAltTitleOut := "<a class=\"fancya\" data-fancybox=\"gallery\" href=\"$1\"><img src=\"$1\" alt=\"$2\" title=\"$3\"></a>" }}
   {{ $finalContent := $altContent | replaceRE $reAltTitleIn $reAltTitleOut | safeHTML }}
 
-  {{ $finalContent }}
+  {{ .Content }}
 
 {{ partial "footer.html" . }}
