--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,12 +1,12 @@
 {{ partial "header.html" . }}
 
-  {{ $reAltIn := "<img src=\"([^\"]+)\" alt=\"([^\"]*)\" />" }}
+  {{/* $reAltIn := "<img src=\"([^\"]+)\" alt=\"([^\"]*)\" />" }}
   {{ $reAltOut := "<a class=\"fancya\" data-fancybox=\"gallery\" href=\"$1\"><img src=\"$1\" alt=\"$2\"></a>" }}
   {{ $altContent := .Content | replaceRE $reAltIn $reAltOut | safeHTML }}
 
   {{ $reAltTitleIn := "<img src=\"([^\"]+)\" alt=\"([^\"]+)\" title=\"([^\"]+)\" />" }}
   {{ $reAltTitleOut := "<a class=\"fancya\" data-fancybox=\"gallery\" href=\"$1\"><img src=\"$1\" alt=\"$2\" title=\"$3\"></a>" }}
-  {{ $finalContent := $altContent | replaceRE $reAltTitleIn $reAltTitleOut | safeHTML }}
+  {{ $finalContent := $altContent | replaceRE $reAltTitleIn $reAltTitleOut | safeHTML */}}
 
   {{ .Content }}
 
