--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -2,19 +2,20 @@
 
 {{ if .Params.show_toc }} {{ .TableOfContents }} {{ end }}
 
-{{ if .Content }}
-
-  {{ $reAltIn := "<img src=\"([^\"]+)\" alt=\"([^\"]*)\" />" }}
-  {{ $reAltOut := "<a class=\"fancya\" data-fancybox=\"gallery\" href=\"$1\"><img src=\"$1\" alt=\"$2\"></a>" }}
-  {{ $altContent := .Content | replaceRE $reAltIn $reAltOut | safeHTML }}
-
-  {{ $reAltTitleIn := "<img src=\"([^\"]+)\" alt=\"([^\"]+)\" title=\"([^\"]+)\" />" }}
-  {{ $reAltTitleOut := "<a class=\"fancya\" data-fancybox=\"gallery\" href=\"$1\"><img src=\"$1\" alt=\"$2\" title=\"$3\"></a>" }}
-  {{ $finalContent := $altContent | replaceRE $reAltTitleIn $reAltTitleOut | safeHTML }}
-
-  {{ $finalContent }}
-
-{{ else }}
+  <main id="main">
+    {{ .Content }}
+    {{ range .Pages.GroupByDate "2006" }}
+    <h2>{{ .Key }}</h2>
+    <ul>
+    {{ range .Pages }}
+    <li>
+      <span class="date">{{ .Date.Format "2006/01/02" }}</span>
+      <a href="{{ .RelPermalink }}">{{ .Title }}</a>
+    </li>
+    {{ end }}
+    </ul>
+  {{ end }}
+  </main>
 
 <!---
 <ul>
@@ -27,22 +28,21 @@
 </ul>
 --->
 
-<div class="archive">
+<!--div class="archive">
   {{ range .Pages.GroupByDate "2006" }}
   <h2 class="archive-title">{{ .Key }}</h2>
   {{ range .Pages.GroupByDate "2006-01-02" }}
   {{ range .Pages }}
   <ul>
     <li>
-      <span>{{ .Date.Format "2006/01/02" }}</span>
+      <span class="date">{{ .Date.Format "2006/01/02" }}</span>
       <a href="{{ .RelPermalink }}">{{ .Title }}</a>
     </li>
   </ul>
   {{ end }}
   {{ end }}
   {{ end }}
-</div>
+</div-->
 
-{{ end }}
 
 {{ partial "footer.html" . }}
