增加百度搜索资源平台HTML标签验证支持

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css">
     <link rel="icon" type="image/png" sizes="32x32" href="/img/logo.png"> <!--- Likan Icon --->
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="baidu-site-verification" content="{{ .Site.Params.baiduSiteVerificateID }}" />
     {{ if eq .URL "/" }}
     <title>{{ .Site.Title }}</title>
     <meta property="og:title" content="{{ .Site.Title }}">
