增加百度搜索资源平台HTML标签验证支持v2

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -11,7 +11,7 @@
     <meta name="baidu-site-verification" content="{{ .Site.Params.baiduSiteVerificateID }}" />
     {{ if eq .URL "/" }}
     <title>{{ .Site.Title }}</title>
-    <meta property="og:title" content="{{ .Site.Title }}">
+    <meta property="og:title" content="{{ .Site.Title }}" />
     <meta property="og:type" content="website">
     {{ else }}
     <!--- Use different titles in different Language versions, 20180210 by Likan Zhan --->
