--- a/layouts/_default/archives.html
+++ b/layouts/_default/archives.html
@@ -3,7 +3,8 @@
 
   <main id="main">
     {{ .Content }}
-    {{ range (where (where .Site.Pages "Type" "in" "post") "Kind" "page").GroupByDate "2006" }}
+    {{ range (where (where .Site.Pages "Type" "in" "posts") "Kind" "page").GroupByDate "2006" }}
+    {{/* range (where (where .Site.RegularPages "Section" "posts") ".Params.hide" "!=" "true").GroupByDate "2006" */}}
     <h2>{{ .Key }}</h2>
     <ul>
     {{ range .Pages }}
