--- a/layouts/_default/archives.html
+++ b/layouts/_default/archives.html
@@ -10,7 +10,7 @@
     {{ range .Pages }}
     <li>
       <span class="date">{{ .Lastmod.Format "2006/01/02" }}</span>
-      <a href="{{ .URL }}">{{ .Title }}</a>
+      <a href="{{ .RelPermalink }}">{{ .Title }}</a>
     </li>
     {{ end }}
     </ul>
