更新主题背景为旧报纸样式

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -3,6 +3,8 @@ html {
     line-height: 1.5;
     color: #111;
     background-color: #fefefe;
+    background-image: url('../img/paper-pattern-clean.png');
+    overflow-y: auto;
 }
 
 
